# FunnyTranslate

./: CMakeLists.txt  README.md  Translate.cpp  Translate.h  UserInfo.txt  curlpost.cpp  curlpost.h  main.cpp  main.h  socketpost.cpp  socketpost.h
Release/: UserInfo.txt  content.txt
Release/Output/: Out.txt
